--- a/major_assignments/grad_student_assignment/grad_student_assignment.Rmd
+++ b/major_assignments/grad_student_assignment/grad_student_assignment.Rmd
@@ -294,6 +294,12 @@ new_marys <- read_csv("C:/Users/Caroline/Desktop/data_journalism_2023_spring/maj
 marys_plus_zip <- new_marys %>% left_join(updated_stmarys, by=c("city"))
 
 ```
+```{r}
+#Counties with Zip codes: Allegany, St. Mary's, Baltimore City, Calvert, Montgomery, Prince George's
+#Combine the dataframes based on Zip Codes
+
+
+```
 
 
 #What Counties Need Zip Codes: 
