--- a/major_assignments/grad_student_assignment/grad_student_assignment.Rmd
+++ b/major_assignments/grad_student_assignment/grad_student_assignment.Rmd
@@ -425,3 +425,6 @@ The really frustrating part is if I had all the addresses, I could just join all
 #What I Learned:
 I learned a lot about how important organization is to data. Throughout the process, I would essentially go down one lane just to realize that I needed to pivot to do what was best for the data. I didn't realize going into it how much time would be needed for something like this, especially when at first glance it doesn't look that complicated. However, I realized that in order to do this, you need to be patient and ask for help. In doing this, there's no right way to do something but there is a wrong way, if that makes sense. So troubleshooting was by far my biggest issue and something that I struggled through, even the tinest things would become hurdles. But I would figure it out, and I'm happy that R tells you when something doesn't work. Overall, I would say I found a lot of success in making everything uniform by using janitor. But I think the dataframe that I made isn't good enough. If I knew how to, I'd make it the way it's supposed to look: join the dataframes together so the columns are the county (not the rows), the date (of county) and zipcode(of county) and then the next three columns would be the next county and so on and so forth. Instead, mine goes by rows, and isn't very readable. If I were to do it again, I'd find ways to talk to Derek earlier in the process and spend more time than I thought I needed with this. (Like weeks, which is what you gave me lol)
 But I think what was important was learning what was possible with the data given. Maybe if I was more proficient, I could've salvaged the type of overdose. But I didn't even want to deal with that because the more important information, the ones they all had in common, were what I needed to start with. If I had spent a semester with this data, I would have tried to find other columns that could maybe be tinkered with to provide the incident/situation/type of overdose. I also tried installing googleway and utilizing that to change the addresses to zip codes, but I was unsuccessful in trying to figure that out after asking chat gpt and looking online. Once I got Derek's key and started using googleway, I think I could figure out how to get coordinates from individual addresses, but at that point, it was above my expertise and I was nearing the deadline. I will though say that if I had figured that out, I would have hopefully been able to get all of the zipcodes from the coordinates and then be able to add them to the giant dataframe. 
+
+#What Could the Data be Used For?
+I think that if we had the dates and zipcodes of the data we could see when and where the majority of the calls were occurring. Something interesting to me was that in some instances, people will call from outside of a jurisdiction. Maybe there's a story there to see how many calls happen outside a jurisdiction and why (for example, more rural areas have farther to call). I think a county that was interesting was Allegany. Though there were issues, I think it's interesting that people who were super close to the border of Maryland, like WV and PA, would be included in the data without any distinction that it wasn't happening in Maryland. Overall, I think if I had been able to collect all the data and do some analysis of the data, I could've had a better grasp of story ideas. However, with the information that I had, these are some places I'd start. 
